progress in code

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -1,3 +1,15 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: hbenmoha <hbenmoha@student.42.fr>          +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2025/07/27 18:35:35 by hbenmoha          #+#    #+#              #
+#    Updated: 2025/07/27 18:35:38 by hbenmoha         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 NAME = philo
 CC = cc
 CFLAGS = -Wall -Wextra -Werror
