--- a/philo/Makefile
+++ b/philo/Makefile
@@ -6,14 +6,14 @@
 #    By: hbenmoha <hbenmoha@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/07/27 18:35:35 by hbenmoha          #+#    #+#              #
-#    Updated: 2025/07/27 18:35:38 by hbenmoha         ###   ########.fr        #
+#    Updated: 2025/07/30 15:03:20 by hbenmoha         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = philo
 CC = cc
-CFLAGS = -Wall -Wextra -Werror
-SRC = # files
+CFLAGS = -Wall -Wextra -Werror -g
+SRC = source/data_init.c source/ft_safe_malloc.c source/main.c source/parsing.c source/utils_1.c
 OBJ = $(SRC:.c=.o)
 DEPS = philo.h
 
@@ -28,9 +28,9 @@ $(NAME): $(OBJ)
 clean:
 	rm -rf $(OBJ)
 
-flcean: clean
+fclean: clean
 	rm -rf $(NAME)
 
-re: flcean all
+re: fclean all
 
 .PHONY: all clean flcean re
