--- a/philo/Makefile
+++ b/philo/Makefile
@@ -6,14 +6,14 @@
 #    By: hbenmoha <hbenmoha@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/07/27 18:35:35 by hbenmoha          #+#    #+#              #
-#    Updated: 2025/08/09 22:03:40 by hbenmoha         ###   ########.fr        #
+#    Updated: 2025/08/10 16:38:59 by hbenmoha         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = philo
 CC = cc
-CFLAGS = -Wall -Wextra -Werror -g3 -fsanitize=thread
-SRC = data_init.c ft_safe_malloc.c main.c parsing.c utils_1.c philo_dining.c
+CFLAGS = -Wall -Wextra -Werror -g -fsanitize=thread
+SRC = data_init.c ft_safe_malloc.c main.c parsing.c utils_1.c philo_dining.c getters_and_setters.c
 OBJ = $(SRC:.c=.o)
 DEPS = philo.h
 
