--- a/old_philo/Makefile
+++ b/old_philo/Makefile
@@ -6,16 +6,16 @@
 #    By: hbenmoha <hbenmoha@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/07/27 18:35:35 by hbenmoha          #+#    #+#              #
-#    Updated: 2025/08/10 19:20:07 by hbenmoha         ###   ########.fr        #
+#    Updated: 2025/08/12 09:37:23 by hbenmoha         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = philo
 CC = cc
-CFLAGS = -Wall -Wextra -Werror -g -fsanitize=thread
+CFLAGS = -Wall -Wextra -Werror
 SRC = data_init.c ft_safe_malloc.c main.c parsing.c utils_1.c philo_dining.c getters_and_setters.c
 OBJ = $(SRC:.c=.o)
-DEPS = philo.h
+DEPS = philo_header.h
 
 all: $(NAME)
 
@@ -33,6 +33,6 @@ fclean: clean
 
 re: fclean all
 
-.PHONY: all clean flcean re
+.PHONY: all clean fclean re
 
 # check if this makefile is corect (no relink ...)
