add checks for if any pthread_mutex_init() failed

--- a/new_philo/makefile
+++ b/new_philo/makefile
@@ -6,13 +6,13 @@
 #    By: hbenmoha <hbenmoha@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/08/12 09:23:11 by hbenmoha          #+#    #+#              #
-#    Updated: 2025/08/13 18:12:59 by hbenmoha         ###   ########.fr        #
+#    Updated: 2025/08/14 17:08:36 by hbenmoha         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = philo
 CC = cc
-CFLAGS = -Wall -Wextra -Werror -g -fsanitize=thread
+CFLAGS = -Wall -Wextra -Werror #-g -fsanitize=thread
 SRC = philo_init.c philo_main.c philo_parsing.c philo_utils.c ft_safe_malloc.c philo_dining.c
 
 OBJ = $(SRC:.c=.o)
