--- a/new_philo/Makefile
+++ b/new_philo/Makefile
@@ -6,15 +6,14 @@
 #    By: hbenmoha <hbenmoha@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/08/12 09:23:11 by hbenmoha          #+#    #+#              #
-#    Updated: 2025/08/15 10:21:04 by hbenmoha         ###   ########.fr        #
+#    Updated: 2025/08/15 13:35:13 by hbenmoha         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = philo
 CC = cc
 CFLAGS = -Wall -Wextra -Werror -g -fsanitize=thread
-SRC = philo_init.c philo_main.c philo_parsing.c philo_utils.c ft_safe_malloc.c philo_dining.c
-
+SRC = philo_init.c philo_main.c philo_parsing.c philo_utils_1.c philo_utils_2.c getters_and_setters_1.c getters_and_setters_2.c ft_safe_malloc.c philo_dining.c
 OBJ = $(SRC:.c=.o)
 DEPS = philo_header.h
 
@@ -35,5 +34,3 @@ fclean: clean
 re: fclean all
 
 .PHONY: all clean fclean re
-
-# check if this makefile is corect (no relink ... check if it's output is correct!)
