[norm] fix norminette + I remove the sleep inside the thinking fun, but I need to test if everything is corect

--- a/new_philo/Makefile
+++ b/new_philo/Makefile
@@ -6,14 +6,16 @@
 #    By: hbenmoha <hbenmoha@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/08/12 09:23:11 by hbenmoha          #+#    #+#              #
-#    Updated: 2025/08/15 13:35:13 by hbenmoha         ###   ########.fr        #
+#    Updated: 2025/08/15 18:42:55 by hbenmoha         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = philo
 CC = cc
-CFLAGS = -Wall -Wextra -Werror -g -fsanitize=thread
-SRC = philo_init.c philo_main.c philo_parsing.c philo_utils_1.c philo_utils_2.c getters_and_setters_1.c getters_and_setters_2.c ft_safe_malloc.c philo_dining.c
+CFLAGS = -Wall -Wextra -Werror
+SRC = philo_init.c philo_main.c philo_parsing.c philo_utils_1.c \
+		philo_utils_2.c philo_utils_3.c philo_utils_4.c getters_and_setters_1.c \
+		getters_and_setters_2.c ft_safe_malloc.c philo_dining.c philo_routine.c
 OBJ = $(SRC:.c=.o)
 DEPS = philo_header.h
 
